# Physics-Simulation-Framework

./: README.md
SimulationFramework/: .editorconfig  CMakeLists.txt  ExampleRenderer.cpp  ExampleRenderer.hpp  GLMainWindow.cpp  GLMainWindow.hpp  GLMainWindow.ui  OpenGLRenderer.hpp  OpenGLWidget.cpp  OpenGLWidget.hpp  Prog1_1Simulation.cpp  Prog1_1Simulation.hpp  Prog1_2Renderer.cpp  Prog1_2Renderer.hpp  Prog1_2Simulation.cpp  Prog1_2Simulation.hpp  Prog1_3Simulation.cpp  Prog1_3Simulation.hpp  constants.hpp  helpers.cpp  helpers.hpp  icon.qrc  icon.rc  main.cpp
SimulationFramework/CMake/: SetupQtPrefixPath.cmake  ShadersToQRC.cmake
SimulationFramework/OpenGLObjects/: CMakeLists.txt
SimulationFramework/OpenGLObjects/include/: OpenGLObjects.h
SimulationFramework/OpenGLObjects/src/: OpenGLObjects.cpp
SimulationFramework/eigen/include/eigen3/Eigen/: Cholesky  CholmodSupport  Core  Eigenvalues  Geometry  Householder  IterativeLinearSolvers  Jacobi  KLUSupport  LU  MetisSupport  OrderingMethods  PaStiXSupport  PardisoSupport  QR  QtAlignedMalloc  SPQRSupport  SVD  SparseCholesky  SparseCore  SparseLU  SparseQR  SuperLUSupport  UmfPackSupport
SimulationFramework/eigen/include/eigen3/Eigen/src/Cholesky/: LLT.h  LLT_LAPACKE.h
SimulationFramework/eigen/include/eigen3/Eigen/src/CholmodSupport/: CholmodSupport.h
SimulationFramework/eigen/include/eigen3/Eigen/src/Core/: ArrayWrapper.h  AssignEvaluator.h  Assign_MKL.h  BandMatrix.h  Block.h  ConditionEstimator.h  CoreEvaluators.h  CoreIterators.h  DenseBase.h  DenseCoeffsBase.h  DiagonalMatrix.h  Dot.h  GeneralProduct.h  GenericPacketMath.h  IO.h  MathFunctions.h  Matrix.h  MatrixBase.h  PermutationMatrix.h  PlainObjectBase.h  Redux.h  Reshaped.h  SelfAdjointView.h  SolveTriangular.h  SolverBase.h  Transpose.h  Transpositions.h  TriangularMatrix.h  VectorwiseOp.h  Visitor.h
SimulationFramework/eigen/include/eigen3/Eigen/src/Eigenvalues/: ComplexSchur_LAPACKE.h  RealQZ.h  RealSchur.h  RealSchur_LAPACKE.h  SelfAdjointEigenSolver_LAPACKE.h  Tridiagonalization.h
SimulationFramework/eigen/include/eigen3/Eigen/src/Geometry/: AlignedBox.h  AngleAxis.h  Hyperplane.h  ParametrizedLine.h  Quaternion.h  RotationBase.h  Transform.h
SimulationFramework/eigen/include/eigen3/Eigen/src/Householder/: BlockHouseholder.h
SimulationFramework/eigen/include/eigen3/Eigen/src/IterativeLinearSolvers/: BiCGSTAB.h  ConjugateGradient.h  IncompleteLUT.h  IterativeSolverBase.h  LeastSquareConjugateGradient.h
SimulationFramework/eigen/include/eigen3/Eigen/src/KLUSupport/: KLUSupport.h
SimulationFramework/eigen/include/eigen3/Eigen/src/LU/: FullPivLU.h  PartialPivLU.h  PartialPivLU_LAPACKE.h
SimulationFramework/eigen/include/eigen3/Eigen/src/MetisSupport/: MetisSupport.h
SimulationFramework/eigen/include/eigen3/Eigen/src/OrderingMethods/: Eigen_Colamd.h  Ordering.h
SimulationFramework/eigen/include/eigen3/Eigen/src/PaStiXSupport/: PaStiXSupport.h
SimulationFramework/eigen/include/eigen3/Eigen/src/PardisoSupport/: PardisoSupport.h
SimulationFramework/eigen/include/eigen3/Eigen/src/QR/: ColPivHouseholderQR.h  ColPivHouseholderQR_LAPACKE.h  CompleteOrthogonalDecomposition.h  FullPivHouseholderQR.h  HouseholderQR.h  HouseholderQR_LAPACKE.h
SimulationFramework/eigen/include/eigen3/Eigen/src/SVD/: BDCSVD.h  JacobiSVD.h  JacobiSVD_LAPACKE.h  UpperBidiagonalization.h
SimulationFramework/eigen/include/eigen3/Eigen/src/SparseCore/: AmbiVector.h  CompressedStorage.h  SparseBlock.h  SparseColEtree.h  SparseCompressedBase.h  SparseCwiseBinaryOp.h  SparseMatrix.h  SparseMatrixBase.h  TriangularSolver.h
SimulationFramework/eigen/include/eigen3/Eigen/src/SparseLU/: SparseLU.h  SparseLU_Memory.h  SparseLU_column_bmod.h  SparseLU_column_dfs.h  SparseLU_copy_to_ucol.h  SparseLU_gemm_kernel.h  SparseLU_heap_relax_snode.h  SparseLU_panel_bmod.h  SparseLU_panel_dfs.h  SparseLU_pivotL.h  SparseLU_pruneL.h  SparseLU_relax_snode.h
SimulationFramework/eigen/include/eigen3/Eigen/src/SparseQR/: SparseQR.h
SimulationFramework/eigen/include/eigen3/Eigen/src/SuperLUSupport/: SuperLUSupport.h
SimulationFramework/eigen/include/eigen3/unsupported/Eigen/: AdolcForward  AlignedVector3  ArpackSupport  AutoDiff  EulerAngles  FFT  IterativeSolvers  KroneckerProduct  LevenbergMarquardt  MPRealSupport  MatrixFunctions  NumericalDiff  Polynomials  Skyline  SparseExtra  SpecialFunctions  Splines
SimulationFramework/glad/: CMakeLists.txt  LICENSE  setup.py
SimulationFramework/glad/glad/: __main__.py  opener.py
SimulationFramework/glad/glad/files/: __init__.py  egl.xml  gl.xml  glx.xml  khrplatform.h  wgl.xml
SimulationFramework/glad/glad/lang/c/: generator.py
SimulationFramework/glad/glad/lang/c/loader/: egl.py
SimulationFramework/glad/glad/lang/common/: loader.py
SimulationFramework/glad/glad/lang/volt/: generator.py
SimulationFramework/shaders/: icosphere.frag  icosphere.vert  skybox.frag  skybox.vert
SimulationFramework/tests/: CMakeLists.txt  main.cpp
(+104 files in other folders)
